[gd_scene load_steps=9 format=2]

[ext_resource path="res://FX/Masks/shards.png" type="Texture" id=1]
[ext_resource path="res://ui/GameHUD.tscn" type="PackedScene" id=11]
[ext_resource path="res://screens/main/main.gd" type="Script" id=12]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;
render_mode unshaded;

uniform float cutoff : hint_range(0.0, 1.0);
uniform float smooth_size : hint_range(0.0, 1.0);
uniform sampler2D mask : hint_albedo;

uniform vec4 color : hint_color;

void fragment()
{
	float value = texture(mask, UV).r;
	float alpha = smoothstep(cutoff, cutoff + smooth_size, value * (1.0 - smooth_size) + smooth_size);
	COLOR = vec4(color.rgb, alpha);
}
"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/cutoff = 0.0
shader_param/smooth_size = 0.235
shader_param/color = null
shader_param/mask = ExtResource( 1 )

[sub_resource type="Animation" id=3]
resource_name = "_SETUP"
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/cutoff")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "transition_in"
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/cutoff")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "transition_out"
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/cutoff")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[node name="main" type="Node2D"]
pause_mode = 2
script = ExtResource( 12 )

[node name="levels" type="Node2D" parent="."]

[node name="text_layer" type="CanvasLayer" parent="."]

[node name="hud_layer" type="CanvasLayer" parent="."]

[node name="GameHUD" parent="hud_layer" instance=ExtResource( 11 )]

[node name="pause_layer" type="CanvasLayer" parent="."]

[node name="transition_layer" type="CanvasLayer" parent="."]

[node name="transition" type="ColorRect" parent="transition_layer"]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="transition_layer/transition"]
anims/_SETUP = SubResource( 3 )
anims/transition_in = SubResource( 4 )
anims/transition_out = SubResource( 5 )

[node name="screen_timer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="screen_timer" to="." method="_on_screen_timer_timeout"]
